updated banner and fixed spacing in cards

--- a/_assets/css/pages/_projects.scss
+++ b/_assets/css/pages/_projects.scss
@@ -2,52 +2,64 @@
 
 .projects-banner {
     .usa-hero {
-        background-image: url(asset_path("stock/USDC_Projects_Hero.webp"));
-        background-position: 20% top;
+      background-image: url(asset_path("stock/USDC_Agency_Banner.png"));
+       //@include u-bg("primary-dark");
+       color: #ffffff;
+        background-position: center center;
         position: relative;
         min-height: 600px;
+        margin-bottom: 15%;
+        max-width: 100%;
 
         // screen size adjustments
         @include at-media-max("desktop-lg") {
-            background-position: 30% top;
+           // background-position: 30% top;
+           margin-bottom: 15%;
         }
 
         @include at-media-max("desktop") {
+          // background-image: none;
+          // background-color: #1a2c85;
             .grid-container {
                 @include u-padding-x(0);
             }
         }
 
-        @include at-media-max("mobile-lg") {
+         @include at-media-max("mobile-lg") {
             @include u-padding-y(0);
-            background-position: 40% top;
+            //background-position: 40% top;
+            background-image: none;
+            background-color: #1a2c85;
             min-height: unset;
-        }
+            margin-bottom: 27%;
+         }
 
         // callout container
         .usa-hero__callout {
-            @include grid-col(6);
-            @include grid-offset(1);
-            @include u-margin-top(15);
+            //@include grid-col(6);
+           // @include grid-offset(1);
+           //@include u-margin-top(15);
+            text-align: center;
 
             // screen size adjustments
             @include at-media-max("desktop") {
                 @include grid-col(auto);
                 @include grid-offset(none);
                 @include u-margin-top(0);
-                background-color: rgba(255, 255, 255, 0.6);
-                position: absolute;
+                //background-color: rgba(255, 255, 255, 0.6);
+                position: relative;
                 bottom: 0;
             }
 
             @include at-media-max("mobile-lg") {
                 position: relative;
-                min-height: 500px;
+                min-height: 430px;
 
                 .content {
                     @include u-padding-x(2);
                     @include u-padding-bottom(3);
-                    position: absolute;
+                    @include u-margin-bottom(2);
+                    position: relative;
                     left: 0;
                     bottom: 0;
                 }
@@ -55,12 +67,16 @@
 
             // subtext
             h2 {
+                color: #ffffff;
                 @include u-margin-top(3);
                 @include u-margin-bottom(0);
             }
         }
     }
 }
+
+
+//Second Section
 .project-section-two{
   max-width: 90%;
   position: relative;
@@ -69,22 +85,76 @@
   margin: auto;
   //max-height: 300px;
 }
+
+
+
+//Youtube Video Responsiveness
+.iframe-container{
+  display: flex; //for example 2
+  justify-content: center;  //example2
+  position: relative; 
+  padding-bottom: 28.25%; 
+  padding-top: 30px; 
+  height: 0; 
+  width: 60%;
+  margin: auto;
+  @include u-margin-top(10);
+  //overflow: hidden; 
+  //position: relative;
+  //width: 50%;
+ // height: 100%;
+  //padding-bottom: 40%;
+  //height: 0;
+  //border-radius: 20px;
+ // overflow: hidden;
+  //z-index: 1;
+  @include at-media-max("mobile-lg") {
+    width: 90%;
+    padding-top: 22px;
+    padding-bottom: 43.36%;
+    margin: auto;
+  }
+}
+
+.iframe-container iframe{
+  //@include u-margin-top(neg-15);
+  position: absolute;
+  top: 0; 
+  left: 0; 
+  width: 100%;
+  height: 100%;
+  margin: 18% 0 10% 0;
+  //object-fit: fill;
+ // z-index: 2;
+
+}
 .projects-whatagenciesdo-image {
     background-image: url(asset_path("stock/USDC_Projects_HostAgency_Placeholder.webp"));
     background-position: 50% top;
 }
-
+.whatagenciesdo{
+  border-radius: 20px;
+  overflow: hidden;
+  z-index: 1;
+}
+.host-paragraph{
+  @include u-bg('gray-5');
+  text-align: center;
+  line-height: 1.5;
+  //position: relative;
+  top: 20%;
+}
 .projects-details{
   @include u-bg('gray-5');
 }
-
-.list-agencies {
-    //min-height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: left;
-  }
+//This section may not be needed and will be deleted before Live deployment
+// .list-agencies {
+//     //min-height: 100vh;
+//     display: flex;
+//     flex-wrap: wrap;
+//     flex-direction: row;
+//     justify-content: left;
+//   }
   
   
   .usa-button--accent-cool{
@@ -164,7 +234,7 @@
 .project-item__header {
   justify-content: space-between;
   align-items:flex-end;
-  padding: 1rem;
+  //padding: 1rem;
   box-sizing: border-box;
 }
 
@@ -190,7 +260,7 @@
 .project-item__content {
   padding: 2rem 1rem;
   display: flex;
-  align-items: center;
+  //align-items: center;
   flex-direction: column;
   @include at-media('tablet') {
     flex-direction: row;
@@ -235,7 +305,17 @@
     @include u-bg('primary-darker');
   }
 }
+
+.impact-list{
+  font-weight: bold;
+}
+
 .project-skill-impact{
   color: #0076D6;
   font-weight: bold;
+}
+
+//Impact Area Description Section
+.impact-descriptions{
+  @include u-bg('gray-5');
 }
